<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3A2FA4"
    tools:context=".Login">

    <ImageView
        android:id="@+id/loginLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/ic_launcher_foreground"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/loginAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AppName"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="24sp"
        android:fontFamily="@font/poppins"
        app:layout_constraintTop_toBottomOf="@id/loginLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/loginMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LoginDescription"
        android:textColor="@android:color/white"
        android:textStyle="italic"
        android:textSize="16sp"
        android:gravity="center"
        style="@style/CustomInputStyle"
        android:fontFamily="@font/poppins"
        app:layout_constraintTop_toBottomOf="@id/loginAppName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginContainerUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/loginMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/loginIconUser"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/user_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/UserLabel" />

        <EditText
            android:id="@+id/loginInputUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/UserLabel"
            android:background="@color/white"
            android:padding="10dp"
            android:fontFamily="@font/poppins"
            app:layout_constraintStart_toEndOf="@id/loginIconUser"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginContainerPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/loginContainerUser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/loginIconPassword"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/password_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/PasswordLabel" />

        <EditText
            android:id="@+id/loginInputPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/PasswordLabel"
            android:inputType="textPassword"
            style="@style/CustomInputStyle"
            android:background="@color/white"
            android:padding="10dp"
            android:fontFamily="@font/poppins"
            app:layout_constraintStart_toEndOf="@id/loginIconPassword"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/loginBtnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/LoginLabel"
        android:textSize="18sp"
        android:layout_marginHorizontal="80dp"
        android:layout_marginTop="20dp"
        app:cornerRadius="50dp"
        android:backgroundTint="@android:color/white"
        android:fontFamily="@font/poppins"
        android:textColor="@android:color/black"
        app:strokeColor="@android:color/black"
        app:strokeWidth="2dp"
        app:layout_constraintTop_toBottomOf="@id/loginContainerPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/loginForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RecoverYourPassword"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:fontFamily="@font/poppins"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/loginBtnLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/loginBtnGoogle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/LoginGoogleText"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins"
        app:icon="@drawable/icongoogle"
        app:iconTint="@null"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/loginForgotPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/loginRegisterLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notaccounttext"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:fontFamily="@font/poppins"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/loginBtnGoogle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>