<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3A2FA4"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="24dp">


        <ImageView
            android:id="@+id/registerlogo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@mipmap/ic_launcher_foreground"
            android:contentDescription="@string/app_name"
            android:layout_marginTop="24dp" />

        <TextView
            android:id="@+id/registerappName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AppName"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="24sp"
            android:fontFamily="@font/poppins"
            android:layout_marginTop="24dp"/>

        <TextView
            android:id="@+id/registerMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registermessage"
            android:textColor="@android:color/white"
            android:textStyle="italic"
            android:textSize="16sp"
            android:gravity="center"
            android:fontFamily="@font/poppins"
            android:layout_marginTop="24dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="32dp"
            android:orientation="horizontal"
            android:background="@drawable/rounded_background"
            android:paddingHorizontal="16dp"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/registerIconUser"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/user_icon"
                android:contentDescription="@string/UserLabel" />

            <EditText
                android:id="@+id/registerInputUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/UserLabel"
                android:background="@color/white"
                android:padding="10dp"
                android:fontFamily="@font/poppins"
                android:layout_marginStart="8dp"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="32dp"
            android:orientation="horizontal"
            android:background="@drawable/rounded_background"
            android:paddingHorizontal="16dp"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/registerIconEmail"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/email_icon"
                android:contentDescription="@string/UserLabel" />

            <EditText
                android:id="@+id/registerInputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/UserLabel"
                android:background="@color/white"
                android:padding="10dp"
                android:fontFamily="@font/poppins"
                android:layout_marginStart="8dp"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="32dp"
            android:orientation="horizontal"
            android:background="@drawable/rounded_background"
            android:paddingHorizontal="16dp"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/registericonPassword"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/password_icon"
                android:contentDescription="@string/PasswordLabel" />

            <EditText
                android:id="@+id/registerinputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/PasswordLabel"
                android:inputType="textPassword"
                android:background="@color/white"
                android:padding="10dp"
                android:fontFamily="@font/poppins"
                android:layout_marginStart="8dp"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="32dp"
            android:orientation="horizontal"
            android:background="@drawable/rounded_background"
            android:paddingHorizontal="16dp"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/registericonconfirmPassword"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/password_icon"
                android:contentDescription="@string/PasswordLabel" />

            <EditText
                android:id="@+id/registerinputconfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirmpasswordtext"
                android:inputType="textPassword"
                android:background="@color/white"
                android:padding="10dp"
                android:fontFamily="@font/poppins"
                android:layout_marginStart="8dp"/>
        </LinearLayout>


        <Button
            android:id="@+id/btnregister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="80dp"
            android:layout_marginTop="20dp"
            android:text="@string/registerbuttontext"
            android:textSize="18sp"
            android:backgroundTint="@android:color/white"
            android:textColor="@android:color/black"
            android:fontFamily="@font/poppins" />


        <TextView
            android:id="@+id/registerloginLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accountalredyexist"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:fontFamily="@font/poppins"
            android:layout_marginTop="12dp"
            android:layout_gravity="center"/>

    </LinearLayout>
</ScrollView>