<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recoverypassword"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3A2FA4"
    tools:context=".PasswordRecoveryActivity">

    <ImageView
        android:id="@+id/recoverlogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/ic_launcher_foreground"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/recoverappName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AppName"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="24sp"
        android:fontFamily="@font/poppins"
        app:layout_constraintTop_toBottomOf="@id/recoverlogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/recoverMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructivemessage"
        android:textColor="@android:color/white"
        android:textStyle="italic"
        android:textSize="16sp"
        android:gravity="center"
        style="@style/CustomInputStyle"
        android:fontFamily="@font/poppins"
        app:layout_constraintTop_toBottomOf="@id/recoverappName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/recoverforget"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_background"
        android:paddingHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/recoverMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">



        <ImageView
            android:id="@+id/recovericonPassword"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/password_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/PasswordLabel" />


        <EditText
            android:id="@+id/recoverinputPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/PasswordLabel"
            android:inputType="textPassword"
            style="@style/CustomInputStyle"
            android:background="@color/white"
            android:padding="10dp"
            android:fontFamily="@font/poppins"
            app:layout_constraintStart_toEndOf="@id/recovericonPassword"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnrecover"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/recoverpassword"
        android:textSize="18sp"
        android:layout_marginHorizontal="80dp"
        android:layout_marginTop="20dp"
        app:cornerRadius="50dp"
        android:backgroundTint="@android:color/white"
        android:fontFamily="@font/poppins"
        android:textColor="@android:color/black"
        app:strokeColor="@android:color/black"
        app:strokeWidth="2dp"
        app:layout_constraintTop_toBottomOf="@id/recoverforget"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>