<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3A2FA4"
    tools:context=".ProfileActivity">


    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/user_icon"
        android:background="@drawable/rounded_background"
        android:padding="16dp"
        android:contentDescription="@string/UserLabel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp" />


    <TextView
        android:id="@+id/profileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/devname"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="22sp"
        android:fontFamily="@font/poppins"
        app:layout_constraintTop_toBottomOf="@id/profileImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"/>

    <!-- Correo -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profileEmailContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_background"
        android:paddingHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/profileName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/profileIconEmail"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/email_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/profileEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/emailexample"
            android:textColor="@android:color/black"
            android:fontFamily="@font/poppins"
            android:padding="10dp"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/profileIconEmail"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profilePhoneContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_background"
        android:paddingHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/profileEmailContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/profileIconPhone"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/phone_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/profilePhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/phoneexample"
            android:textColor="@android:color/black"
            android:fontFamily="@font/poppins"
            android:padding="10dp"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/profileIconPhone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profileAddressContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_background"
        android:paddingHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/profilePhoneContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/profileIconAddress"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/location_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/profileAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/addressexample"
            android:textColor="@android:color/black"
            android:fontFamily="@font/poppins"
            android:padding="10dp"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/profileIconAddress"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>